--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "husky": "^4.3.0",
     "lint-staged": "^10.5.1",
     "plop": "^2.7.4",
+    "plop-pack-sanity-starter": "^0.0.1",
     "prettier": "^2.1.2"
   },
   "husky": {
