Add babel support for eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": ["eslint:recommended", "plugin:react/recommended"],
   "plugins": ["prettier", "react"],
+  "parser": "babel-eslint",
   "parserOptions": {
     "sourceType": "module"
   },
